# banco_imobiliario_simulador

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pytest.ini
banco_imobiliario/: config.py  entidades.py  main.py
tests/: test_configuracao.py
